test/golden96/Hello {piCL.{truncate number + precision}}.18094049741103110835.golden
INITIALPATH:7:52: error:
    • Variable not in scope: precision
    • In the quasi-quotation: [fmt|Hello {pi:.{truncate number + precision}}|]
  |
7 | main = putStrLn [fmt|Hello {pi:.{truncate number + precision}}|]
  |                                                    ^^^^^^^^^